# TrieSearchX

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  TrieSearchX  benchmark  cmake_install.cmake  docker-compose.yml  init.js  requirements.txt  word-search.cpp
include/: MongoConnector.h  Trie.h  TrieNode.h
scripts/: benchmark.cpp  data_loader.py
scripts /: benchmark.cpp
src/: MongoConnector.cpp  Trie.cpp  TrieNode.cpp  main.cpp
